# connect4-cpp

./: .gitignore  CMakeLists.txt  LAN_MULTIPLAYER_SUMMARY.md  README.md  TASK_SUMMARY.md  UI_MIGRATION_PLAN.md  create-issues.sh
.copilot/: cicd.agent.md
.github/agents/: cicd.agent.md  developer.agent.md  planner.agent.md
.github/workflows/: CREATE_ISSUES_GUIDE.md  build.yml  create-issues.yml
_codeql_build_dir/: connect4
include/: AIPlayer.h  Board.h  Game.h  GameClient.h  GameServer.h  GameUI.h  MinimaxAI.h  NetworkManager.h  NetworkProtocol.h  RandomAI.h
issues/: README.md  ai-1-game-mode-selection-ui.md  ai-2-random-ai-implementation.md  ai-3-minimax-ai-implementation.md  task-1-1-gui-library-dependency.md  task-1-2-build-configuration.md  task-2-1-window-rendering.md  task-2-2-board-renderer.md  task-2-3-piece-rendering.md  task-3-1-click-selection.md  task-3-2-turn-feedback.md  task-3-3-win-draw-display.md  task-4-1-new-game-button.md  task-4-2-quit-button.md  task-5-1-refactor-game-class.md  task-5-2-ui-manager.md  task-5-3-update-main.md  task-6-1-visual-polish.md  task-6-2-error-handling.md  task-6-3-update-documentation.md  task-6-4-update-cicd.md  task-7-1-manual-testing.md  task-7-2-automated-testing.md  task-lan-01-network-infrastructure.md  task-lan-02-client-server-architecture.md  task-lan-03-network-protocol.md  task-lan-04-game-synchronization.md  task-lan-05-ui-integration.md  task-lan-06-error-handling.md  task-lan-07-testing-documentation.md
src/: Board.cpp  Game.cpp  GameClient.cpp  GameServer.cpp  GameUI.cpp  MinimaxAI.cpp  NetworkManager.cpp  NetworkProtocol.cpp  RandomAI.cpp  main.cpp
